# messaging

./: README.md  pyproject.toml
src/e1_basic_structure/entities/: __init__.py  message.py  publisher.py  subscriber.py
src/e1_basic_structure/ports/: __init__.py  message_port.py  subscriber_port.py
src/e1_basic_structure/value_objects/: __init__.py  subscriber_id.py
tests/e1_basic_structure/entities/: test_publisher.py
