[tool.poetry]
name = "messaging"
version = "0.1.0"
description = "Study about messaging patterns"
authors = ["Francisco Mascarenhas"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
mockito = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
